--- a/index.html
+++ b/index.html
@@ -173,7 +173,8 @@
                   <p align="left"><i>Links:</i></p>
                   <p align="left"><a class="link" href="https://mlavva.github.io/pdfs/cs182_report_robust_and_generalizable_computer_vision_classification.pdf" target="_blank">
                   Paper</a>, <a class="link" href="https://github.com/mlavva/yolo9000" target="_blank">
-                  GitHub Repo</a>, <a class="link" href="https://www.academia.edu/74048620/Robust_and_Generalizable_Computer_Vision_Classification" target="_blank">Academia</a></p>
+                  GitHub Repo</a>, <a class="link" href="https://www.academia.edu/74048620/Robust_and_Generalizable_Computer_Vision_Classification" target="_blank">Academia</a>
+                  <a class="link" href="https://www.researchgate.net/publication/359343787_Robust_and_Generalizable_Computer_Vision_Classification" target="_blank">ResearchGate</a></p>
                 </div>
            </div>
         <h3>Projects</h3>
@@ -244,7 +245,7 @@
         <h3>Other Links</h3>
             <div class="card">
                 <div class="container">
-                  <p align="left"><a class="link" href="https://cal.berkeley.edu/mlavva" target="_blank">Cal Alumni</a>, <a class="link" href="https://ucberkeley.academia.edu/mlavva" target="_blank">Academia</a>, <a class="link" href="https://angel.co/u/mlavva" target="_blank">AngelList</a>, <a class="link" href="https://www.facebook.com/mlavva" target="_blank">Facebook</a>, <a class="link" href="https://www.codecademy.com/profiles/mlavva" target="_blank">Codecademy</a>, <a class="link" href="https://www.khanacademy.org/profile/mlavva" target="_blank">Khan Academy</a>, <a class="link" href="https://www.kaggle.com/dataclass" target="_blank">Kaggle</a></p>
+                  <p align="left"><a class="link" href="https://cal.berkeley.edu/mlavva" target="_blank">Cal Alumni</a>, <a class="link" href="https://ucberkeley.academia.edu/mlavva" target="_blank">Academia</a>, <a class="link" href="https://www.researchgate.net/profile/Michael-Lavva" target="_blank">ResearchGate</a>, <a class="link" href="https://angel.co/u/mlavva" target="_blank">AngelList</a>, <a class="link" href="https://www.facebook.com/mlavva" target="_blank">Facebook</a>, <a class="link" href="https://www.codecademy.com/profiles/mlavva" target="_blank">Codecademy</a>, <a class="link" href="https://www.khanacademy.org/profile/mlavva" target="_blank">Khan Academy</a>, <a class="link" href="https://www.kaggle.com/dataclass" target="_blank">Kaggle</a></p>
                 </div>
            </div>
         <br></br>
