--- a/index.html
+++ b/index.html
@@ -173,8 +173,7 @@
                   <p align="left"><i>Links:</i></p>
                   <p align="left"><a class="link" href="https://mlavva.github.io/pdfs/cs182_report_robust_and_generalizable_computer_vision_classification.pdf" target="_blank">
                   Paper</a>, <a class="link" href="https://github.com/mlavva/yolo9000" target="_blank">
-                  GitHub Repo</a>, <a class="link" href="https://www.academia.edu/74048620/Robust_and_Generalizable_Computer_Vision_Classification" target="_blank">Academia</a>
-                  <a class="link" href="https://www.researchgate.net/publication/359343787_Robust_and_Generalizable_Computer_Vision_Classification" target="_blank">ResearchGate</a></p>
+                  GitHub Repo</a>, <a class="link" href="https://www.academia.edu/74048620/Robust_and_Generalizable_Computer_Vision_Classification" target="_blank">Academia</a>, <a class="link" href="https://www.researchgate.net/publication/359343787_Robust_and_Generalizable_Computer_Vision_Classification" target="_blank">ResearchGate</a></p>
                 </div>
            </div>
         <h3>Projects</h3>
