--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
                  <div class="container">
                     <p align="left"><b>Salesforce</b><img src="images/icons/salesforce.png" align="right" height="50" width="50" alt="Salesforce"></p>
                     <p align="left">Software Engineer</p>
-                    <p align="left">Associate Member of Technical Staff</p>
+                    <p align="left">Member of Technical Staff (May 2022 - Present)</p>
+                    <p align="left">Associate Member of Technical Staff (January 2021 - May 2022)</p>
                     <p align="left">Incident Management Tools</p>
                     <p align="left"><i>San Francisco, CA &#183; January 2021 - Present</i></p>
                     <h3><p align="left">&#183;</p></h3>
@@ -248,7 +249,7 @@
                 </div>
            </div>
         <br></br>
-       	<a href="https://github.com/mlavva/mlavva.github.io" target="_blank"><p style="font-size: 12px; color:#999999;";>Last Updated: March 2022</p></a>
+       	<a href="https://github.com/mlavva/mlavva.github.io" target="_blank"><p style="font-size: 12px; color:#999999;";>Last Updated: May 2022</p></a>
      </center>
      </div>
   </body>
