--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
         <center>
            <a href="https://www.linkedin.com/in/mlavva" class="fa fa-linkedin" target="_blank"></a>
            <a href="https://www.github.com/mlavva" class="fa fa-github" target="_blank"></a>
+           <a href="https://twitter.com/m_lavva" class="fa fa-twitter" target="_blank"></a>
            <a href="m&#97;&#105;&#108;&#116;&#111;&#x3A;&#109;&#108;&#97;&#118;&#118;&#97;&#64;&#98;&#101;&#114;&#107;&#101;&#108;&#101;&#121;&#46;&#101;&#100;u" class="fa fa-envelope" target="_blank"></a>
+           <a href="https://www.facebook.com/mlavva" class="fa fa-facebook" target="_blank"></a>
+           <a href="https://www.instagram.com/m_lavva/" class="fa fa-instagram" target="_blank"></a>
            <br></br>
            <h3>Background</h3>
            <div class="card">
@@ -245,11 +248,11 @@
         <h3>Other Links</h3>
             <div class="card">
                 <div class="container">
-                  <p align="left"><a class="link" href="https://cal.berkeley.edu/mlavva" target="_blank">Cal Alumni</a>, <a class="link" href="https://ucberkeley.academia.edu/mlavva" target="_blank">Academia</a>, <a class="link" href="https://www.researchgate.net/profile/Michael-Lavva" target="_blank">ResearchGate</a>, <a class="link" href="https://twitter.com/m_lavva" target="_blank">Twitter</a>, <a class="link" href="https://angel.co/u/mlavva" target="_blank">AngelList</a>, <a class="link" href="https://www.facebook.com/mlavva" target="_blank">Facebook</a>, <a class="link" href="https://www.instagram.com/m_lavva" target="_blank">Instagram</a>, <a class="link" href="https://www.codecademy.com/profiles/mlavva" target="_blank">Codecademy</a>, <a class="link" href="https://www.khanacademy.org/profile/mlavva" target="_blank">Khan Academy</a>, <a class="link" href="https://www.kaggle.com/dataclass" target="_blank">Kaggle</a></p>
+                  <p align="left"><a class="link" href="https://cal.berkeley.edu/mlavva" target="_blank">Cal Alumni</a>, <a class="link" href="https://ucberkeley.academia.edu/mlavva" target="_blank">Academia</a>, <a class="link" href="https://www.researchgate.net/profile/Michael-Lavva" target="_blank">ResearchGate</a>, <a class="link" href="https://angel.co/u/mlavva" target="_blank">AngelList</a>, <a class="link" href="https://www.codecademy.com/profiles/mlavva" target="_blank">Codecademy</a>, <a class="link" href="https://www.khanacademy.org/profile/mlavva" target="_blank">Khan Academy</a>, <a class="link" href="https://www.kaggle.com/dataclass" target="_blank">Kaggle</a></p>
                 </div>
            </div>
         <br></br>
-       	<a href="https://github.com/mlavva/mlavva.github.io" target="_blank"><p style="font-size: 12px; color:#999999;";>Last Updated: August 2022</p></a>
+       	<a href="https://github.com/mlavva/mlavva.github.io" target="_blank"><p style="font-size: 12px; color:#999999;";>Last Updated: October 2022</p></a>
      </center>
      </div>
   </body>
