--- a/projects.html
+++ b/projects.html
@@ -27,6 +27,13 @@
      </ul>
      <div style="margin-top:80px;">
         <center>
+          <a href="https://www.linkedin.com/in/mlavva" class="fa fa-linkedin" target="_blank"></a>
+          <a href="https://www.github.com/mlavva" class="fa fa-github" target="_blank"></a>
+          <a href="https://twitter.com/m_lavva" class="fa fa-twitter" target="_blank"></a>
+          <a href="m&#97;&#105;&#108;&#116;&#111;&#x3A;&#109;&#108;&#97;&#118;&#118;&#97;&#64;&#98;&#101;&#114;&#107;&#101;&#108;&#101;&#121;&#46;&#101;&#100;u" class="fa fa-envelope" target="_blank"></a>
+          <a href="https://www.facebook.com/mlavva" class="fa fa-facebook" target="_blank"></a>
+          <a href="https://www.instagram.com/m_lavva/" class="fa fa-instagram" target="_blank"></a>
+          <br></br>
           <h3>List of Projects</h3>
             <div class="card">
                 <div class="container">
@@ -108,7 +115,7 @@
                 </div>
            </div>
         <br></br>
-        <a href="https://github.com/mlavva/mlavva.github.io" target="_blank"><p style="font-size: 12px; color:#999999;";>Last Updated: January 2021</p></a>
+        <a href="https://github.com/mlavva/mlavva.github.io" target="_blank"><p style="font-size: 12px; color:#999999;";>Last Updated: October 2022</p></a>
         </center>
      </div>
   </body>
