--- a/index.html
+++ b/index.html
@@ -248,11 +248,11 @@
         <h3>Other Links</h3>
             <div class="card">
                 <div class="container">
-                  <p align="left"><a class="link" href="https://cal.berkeley.edu/mlavva" target="_blank">Cal Alumni</a>, <a class="link" href="https://ucberkeley.academia.edu/mlavva" target="_blank">Academia</a>, <a class="link" href="https://www.researchgate.net/profile/Michael-Lavva" target="_blank">ResearchGate</a>, <a class="link" href="https://angel.co/u/mlavva" target="_blank">AngelList</a>, <a class="link" href="https://www.codecademy.com/profiles/mlavva" target="_blank">Codecademy</a>, <a class="link" href="https://www.khanacademy.org/profile/mlavva" target="_blank">Khan Academy</a>, <a class="link" href="https://www.kaggle.com/dataclass" target="_blank">Kaggle</a></p>
+                  <p align="left"><a class="link" href="https://cal.berkeley.edu/mlavva" target="_blank">Cal Alumni</a>, <a class="link" href="https://ucberkeley.academia.edu/mlavva" target="_blank">Academia</a>, <a class="link" href="https://www.researchgate.net/profile/Michael-Lavva" target="_blank">ResearchGate</a>, <a class="link" href="https://angel.co/u/mlavva" target="_blank">Wellfound</a>, <a class="link" href="https://www.kaggle.com/dataclass" target="_blank">Kaggle</a></p>
                 </div>
            </div>
         <br></br>
-       	<a href="https://github.com/mlavva/mlavva.github.io" target="_blank"><p style="font-size: 12px; color:#999999;";>Last Updated: December 2022</p></a>
+       	<a href="https://github.com/mlavva/mlavva.github.io" target="_blank"><p style="font-size: 12px; color:#999999;";>Last Updated: January 2023</p></a>
      </center>
      </div>
   </body>
