--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
            <a href="https://www.github.com/mlavva" class="fa fa-github" target="_blank"></a>
            <a href="https://twitter.com/m_lavva" class="fa fa-twitter" target="_blank"></a>
            <a href="m&#97;&#105;&#108;&#116;&#111;&#x3A;&#109;&#108;&#97;&#118;&#118;&#97;&#64;&#98;&#101;&#114;&#107;&#101;&#108;&#101;&#121;&#46;&#101;&#100;u" class="fa fa-envelope" target="_blank"></a>
+           <a href="https://drive.google.com/file/d/1iZAbWqsv19nZo2Nx5Ly97Toz1VSD5lHQ/view?usp=share_link" class="fa fa-file-pdf-o" target="_blank"></a>
            <a href="https://www.facebook.com/mlavva" class="fa fa-facebook" target="_blank"></a>
            <a href="https://www.instagram.com/mlavva/" class="fa fa-instagram" target="_blank"></a>
            <br></br>
