--- a/index.html
+++ b/index.html
@@ -214,16 +214,20 @@
                   <p align="left"><b>Languages:</b></p>
                   <p align="left">
                   <a href="https://www.java.com/en/" target="_blank"><span class="devicons devicons-java" style="font-size:50px"></span></a>
-                  <a href="https://www.python.org" target="_blank"><span class="devicons devicons-python" style="font-size:50px"></span></a>
-                  <a href="https://www.scala-lang.org" target="_blank"><span class="devicons devicons-scala" style="font-size:50px"></span></a>
                   <a href="https://www.javascript.com" target="_blank"><span class="devicons devicons-javascript" style="font-size:50px"></span></a>
-                  <a href="https://golang.org" target="_blank"><span class="devicons devicons-go" style="font-size:50px"></span></a>
-                  <a href="https://www.postgresql.org" target="_blank"><span class="devicons devicons-postgresql" style="font-size:50px"></span></a>
+                  <a href="https://www.postgresql.org" target="_blank"><span class="devicons devicons-postgresql" style="font-size:50px"></span></a>                  
+                  <a href="https://www.python.org" target="_blank"><span class="devicons devicons-python" style="font-size:50px"></span></a>
+                  <a href="https://golang.org" target="_blank"><span class="devicons devicons-go" style="font-size:50px"></span></a>                  
+                  <a href="https://www.scala-lang.org" target="_blank"><span class="devicons devicons-scala" style="font-size:50px"></span></a>
                   </p>
                   <p align="left"><b>Frameworks:</b></p>
                   <p align="left">
                   <a href="https://git-scm.com" target="_blank"><span class="devicons devicons-git" style="font-size:50px"></span></a>
+                  <a href="https://nodejs.org/en" target="_blank"><span class="devicons devicons-nodejs" style="font-size:50px"></span></a>
                   <a href="https://www.docker.com" target="_blank"><span class="devicons devicons-docker" style="font-size:50px"></span></a>
+                  <a href="https://www.heroku.com" target="_blank"><span class="devicons devicons-heroku" style="font-size:50px"></span></a>     
+                  <a href="https://www.npmjs.com" target="_blank"><span class="devicons devicons-npm" style="font-size:50px"></span></a>       
+                  <a href="https://redis.io" target="_blank"><span class="devicons devicons-redis" style="font-size:50px"></span></a>             
                   <a href="https://aws.amazon.com" target="_blank"><span class="devicons devicons-aws" style="font-size:50px"></span></a>
                   <a href="https://cloud.google.com" target="_blank"><span class="devicons devicons-google-cloud-platform" style="font-size:50px"></span></a>
                   <a href="https://reactjs.org" target="_blank"><span class="devicons devicons-react" style="font-size:50px"></span></a>
