--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
         <h3>Awards</h3>
             <div class="card">
                 <div class="container">
+                  <p align="left"><a href="https://engineering.salesforce.com/celebrating-our-technology-and-products-all-stars-4dba20137cb8" target="_blank"> TMP All-Star Award Winner - <i> June 2023 </i></a></p>
                   <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs164/fa20/tournament-results.html" target="_blank"> Compilers Tournament Award (Team29) - <i> Dec 2020 </i></a></p>
                   <p align="left"><a href="https://ls.berkeley.edu/advising/academic-progress/graduation/honors" target="_blank"> Dean's Honors List - <i> Jan 2017 </i></a></p>
                   <p align="left"><a href="https://apstudents.collegeboard.org/awards-recognitions/ap-scholar-award" target="_blank"> National AP Scholar Award - <i> May 2016 </i></a></p>
@@ -250,7 +251,7 @@
                 </div>
            </div>
         <br></br>
-       	<a href="https://github.com/mlavva/mlavva.github.io" target="_blank"><p style="font-size: 12px; color:#999999;";>Last Updated: April 2023</p></a>
+       	<a href="https://github.com/mlavva/mlavva.github.io" target="_blank"><p style="font-size: 12px; color:#999999;";>Last Updated: June 2023</p></a>
      </center>
      </div>
   </body>
