--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         <h3>Other Links</h3>
             <div class="card">
                 <div class="container">
-                  <p align="left"><a class="link" href="https://cal.berkeley.edu/mlavva" target="_blank">Cal Alumni</a>, <a class="link" href="https://ucberkeley.academia.edu/mlavva" target="_blank">Academia</a>, <a class="link" href="https://www.researchgate.net/profile/Michael-Lavva" target="_blank">ResearchGate</a>, <a class="link" href="https://angel.co/u/mlavva" target="_blank">Wellfound</a>, <a class="link" href="https://www.tiktok.com/@mlavva" target="_blank">TikTok</a>, <a class="link" href="https://www.kaggle.com/dataclass" target="_blank">Kaggle</a></p>
+                  <p align="left"><a class="link" href="https://cal.berkeley.edu/mlavva" target="_blank">Cal Alumni</a>, <a class="link" href="https://ucberkeley.academia.edu/mlavva" target="_blank">Academia</a>, <a class="link" href="https://www.researchgate.net/profile/Michael-Lavva" target="_blank">ResearchGate</a>, <a class="link" href="https://angel.co/u/mlavva" target="_blank">Wellfound</a>, <a class="link" href="https://www.tiktok.com/@mlavva" target="_blank">TikTok</a>, <a class="link" href="https://www.threads.net/@mlavva" target="_blank">Threads</a>, <a class="link" href="https://www.kaggle.com/dataclass" target="_blank">Kaggle</a></p>
                 </div>
            </div>
         <br></br>
