--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <p align="left">Software Engineer</p>
                     <p align="left">Member of Technical Staff <i>(May 2022 - Present)</i></p>
                     <p align="left">Associate Member of Technical Staff <i>(January 2021 - May 2022)</i></p>
-                    <p align="left">Incident Management Tools, Proactive Insights</p>
+                    <p align="left">Incident Management Tools, Customer Availability Products & Services</p>
                     <p align="left"><i>San Francisco, CA &#183; January 2021 - Present</i></p>
                     <h3><p align="left">&#183;</p></h3>
                     <p align="left">Software Engineering Intern</p>
