--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
            <a href="https://www.github.com/mlavva" class="fa fa-github" target="_blank"></a>
            <a href="https://twitter.com/m_lavva" class="fa fa-twitter" target="_blank"></a>
            <a href="m&#97;&#105;&#108;&#116;&#111;&#x3A;&#109;&#108;&#97;&#118;&#118;&#97;&#64;&#98;&#101;&#114;&#107;&#101;&#108;&#101;&#121;&#46;&#101;&#100;u" class="fa fa-envelope" target="_blank"></a>
-           <a href="https://drive.google.com/file/d/1iZAbWqsv19nZo2Nx5Ly97Toz1VSD5lHQ/view?usp=share_link" class="fa fa-file-text-o" target="_blank"></a>
+           <a href="https://drive.google.com/file/d/1PJb26JGdevmBQ6EhgEY8lLewfa7mQlv_/view?usp=sharing" class="fa fa-file-text-o" target="_blank"></a>
            <a href="https://www.facebook.com/mlavva" class="fa fa-facebook" target="_blank"></a>
            <a href="https://www.instagram.com/mlavva/" class="fa fa-instagram" target="_blank"></a>
            <br></br>
@@ -251,7 +251,7 @@
                 </div>
            </div>
         <br></br>
-       	<a href="https://github.com/mlavva/mlavva.github.io" target="_blank"><p style="font-size: 12px; color:#999999;";>Last Updated: October 2023</p></a>
+       	<a href="https://github.com/mlavva/mlavva.github.io" target="_blank"><p style="font-size: 12px; color:#999999;";>Last Updated: April 2024</p></a>
      </center>
      </div>
   </body>
