--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
                  <div class="container">
                     <p align="left"><b>Salesforce</b><img src="images/icons/salesforce.png" align="right" height="50" width="50" alt="Salesforce"></p>
                     <p align="left">Software Engineer</p>
-                    <p align="left">Member of Technical Staff <i>(May 2022 - Present)</i></p>
+                    <p align="left">Senior Member of Technical Staff <i>(August 2024 - Present)</i></p>
+                    <p align="left">Member of Technical Staff <i>(May 2022 - July 2024)</i></p>
                     <p align="left">Associate Member of Technical Staff <i>(January 2021 - May 2022)</i></p>
                     <p align="left">Incident Management Tools, Customer Availability Products & Services</p>
                     <p align="left"><i>San Francisco, CA &#183; January 2021 - Present</i></p>
@@ -251,7 +252,7 @@
                 </div>
            </div>
         <br></br>
-       	<a href="https://github.com/mlavva/mlavva.github.io" target="_blank"><p style="font-size: 12px; color:#999999;";>Last Updated: April 2024</p></a>
+       	<a href="https://github.com/mlavva/mlavva.github.io" target="_blank"><p style="font-size: 12px; color:#999999;";>Last Updated: August 2024</p></a>
      </center>
      </div>
   </body>
